--- a/templates/tweet-form.hbs
+++ b/templates/tweet-form.hbs
@@ -1,12 +1,12 @@
 <form>
   <div class= "form-group">
     <label>User Name</label>
-    {{input class="form-control" value=user}}
+    {{input class="form-control" value=inputUser}}
   </div>
 
   <div class= "form-group">
     <label>Tweet</label>
-    {{input class="form-control" value=text}}
+    {{input class="form-control" value=inputText}}
   </div>
 
   <button class="btn btn-info" {{action 'newTweet'}}>Tweet It</button>
