--- a/templates/tweets.hbs
+++ b/templates/tweets.hbs
@@ -1,15 +1,22 @@
 <div class="row">
-  <div class="col-xs-4">
+  <div class="col-xs-4 well">
     {{render 'tweet-form'}}
   </div>
 
   <div class="col-xs-6">
-    <ul>
+    <ul class="list-unstyled">
       {{#each}}
-        <li>
-          <h4>{{user}}</h4>
-          <p>{{text}}</p>
-        </li>
+        <div {{action "showTime" on="click"}}>
+          <li class="tweet">
+            <h4>{{user}}</h4>
+            <p>{{text}}</p>
+
+            {{#if dateShowing}}
+              <p>{{dateTime}}</p>
+            {{/if}}
+
+          </li>
+      </div>
       {{/each}}
     </ul>
   </div>
