Add ability to reply and create new tweet

--- a/templates/tweets.hbs
+++ b/templates/tweets.hbs
@@ -16,9 +16,10 @@
             {{/if}}
 
             {{#if replyShowing}}
-              {{partial 'tweet-form'}}
+              <div class="well">
+                {{render 'tweet-form' tweets}}
+              </div>
             {{/if}}
-
           </li>
       </div>
       {{/each}}
