Remove minimal styling and add reply button toggle capability

--- a/templates/tweet-form.hbs
+++ b/templates/tweet-form.hbs
@@ -9,7 +9,7 @@
     {{textarea class="form-control" maxlength="141" value=inputText key-up = "tweetLength"}}
   </div>
 
-  <button class="btn btn-info" {{action 'newTweet'}}>Tweet It</button>
+  <button class="btn btn-info" type="submit" {{action 'newTweet'}}>Tweet It</button>
 
 </form>
 
